test_regress/t/t_modport_export_bad3.out
%Error: t/t_modport_export_bad3.v:20:8: Interface port not found for out-of-block definition: nonexistent
   20 |   task nonexistent.send(input logic [7:0] val);
      |        ^~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
